# rust-colored-noise

./: Cargo.toml  README.md  setup.cfg  setup.py
benches/: perlin.rs
colored_noise/: __init__.py
src/: lib.rs  perlin.rs
