[package]
name = "rust-colored-noise"
version = "0.1.0"
authors = ["Akishika Issui <kshkss@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "colored_noise"

[dependencies]
ndarray = "0.15"
itertools = "0.10"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "perlin"
harness = false
