[package]
name = "rust-colored-noise"
version = "0.1.0"
authors = ["Akishika Issui <kshkss@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "colored_noise"
crate-type = ["lib", "cdylib"]

[dependencies]
ndarray = "0.14"
itertools = "0.10"
numpy = "0.13"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "perlin"
harness = false
